{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 27,
  "lineage": "e6781258-add1-5c7f-32c5-ac4c8b172948",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "custom-elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027a856a854a167db",
            "domain": "vpc",
            "id": "eipalloc-027a856a854a167db",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-88-200-118.compute-1.amazonaws.com",
            "public_ip": "54.88.200.118",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "My-web-instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a0ae173da5807d3",
            "arn": "arn:aws:ec2:us-east-1:030089517321:instance/i-0452fc3510ca9cf3c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0452fc3510ca9cf3c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-acc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02cf815f027c85d69",
            "private_dns": "ip-10-0-1-232.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.232",
            "public_ip": "52.90.104.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-013107bb9fc2ba117",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-030722fc91333fae4",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cf8ed7f4b422367f"
            ]
          },
          "dependencies": [
            "aws_security_group.Custom-Public-SG-DB",
            "aws_subnet.public-subnet1",
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "My-web-instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a0ae173da5807d3",
            "arn": "arn:aws:ec2:us-east-1:030089517321:instance/i-0f6b6d70bb75fb0cd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f6b6d70bb75fb0cd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-acc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f25b3431ba55cfcb",
            "private_dns": "ip-10-0-2-165.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.165",
            "public_ip": "44.213.128.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cae1043aff6be49c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb19ac6c52f7343f",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cf8ed7f4b422367f"
            ]
          },
          "dependencies": [
            "aws_security_group.Custom-Public-SG-DB",
            "aws_subnet.public-subnet2",
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "custom-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030089517321:internet-gateway/igw-04c4e7b4dac6140a1",
            "id": "igw-04c4e7b4dac6140a1",
            "owner_id": "030089517321",
            "tags": {
              "Name": "My-Internet-Gateway"
            },
            "tags_all": {
              "Name": "My-Internet-Gateway"
            },
            "vpc_id": "vpc-0b050a9c14138aac0"
          },
          "dependencies": [
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "My-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:030089517321:loadbalancer/app/My-lb/220d852810606367",
            "arn_suffix": "app/My-lb/220d852810606367",
            "desync_mitigation_mode": "defensive",
            "dns_name": "My-lb-1832439743.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:030089517321:loadbalancer/app/My-lb/220d852810606367",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "My-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-023de6f8cdc2b683d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-030722fc91333fae4"
              },
              {
                "subnet_id": "subnet-0fb19ac6c52f7343f"
              }
            ],
            "subnets": [
              "subnet-030722fc91333fae4",
              "subnet-0fb19ac6c52f7343f"
            ],
            "vpc_id": "vpc-0b050a9c14138aac0",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.My-sg",
            "aws_subnet.public-subnet1",
            "aws_subnet.public-subnet2",
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "My-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:030089517321:listener/app/My-lb/220d852810606367/01e9fd234e5773a6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:030089517321:targetgroup/Customtargetgroup/0cd40a15a74e95ee",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:030089517321:listener/app/My-lb/220d852810606367/01e9fd234e5773a6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:030089517321:loadbalancer/app/My-lb/220d852810606367",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.My-lb",
            "aws_lb_target_group.My-lb-tg",
            "aws_security_group.My-sg",
            "aws_subnet.public-subnet1",
            "aws_subnet.public-subnet2",
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "My-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:030089517321:targetgroup/Customtargetgroup/0cd40a15a74e95ee",
            "arn_suffix": "targetgroup/Customtargetgroup/0cd40a15a74e95ee",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:030089517321:targetgroup/Customtargetgroup/0cd40a15a74e95ee",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Customtargetgroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b050a9c14138aac0"
          },
          "dependencies": [
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "My-target-group1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:030089517321:targetgroup/Customtargetgroup/0cd40a15a74e95ee-20230612100051777300000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:030089517321:targetgroup/Customtargetgroup/0cd40a15a74e95ee",
            "target_id": "i-0452fc3510ca9cf3c"
          },
          "dependencies": [
            "aws_instance.My-web-instance1",
            "aws_lb_target_group.My-lb-tg",
            "aws_security_group.Custom-Public-SG-DB",
            "aws_subnet.public-subnet1",
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "My-target-group2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:030089517321:targetgroup/Customtargetgroup/0cd40a15a74e95ee-20230612100041939400000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:030089517321:targetgroup/Customtargetgroup/0cd40a15a74e95ee",
            "target_id": "i-0f6b6d70bb75fb0cd"
          },
          "dependencies": [
            "aws_instance.My-web-instance2",
            "aws_lb_target_group.My-lb-tg",
            "aws_security_group.Custom-Public-SG-DB",
            "aws_subnet.public-subnet2",
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "custom-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027a856a854a167db",
            "connectivity_type": "public",
            "id": "nat-0769acf15fc88f96e",
            "network_interface_id": "eni-09dfa3c488511f8a6",
            "private_ip": "10.0.2.226",
            "public_ip": "54.88.200.118",
            "subnet_id": "subnet-0fb19ac6c52f7343f"
          },
          "dependencies": [
            "aws_eip.custom-elastic-ip",
            "aws_subnet.public-subnet2",
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030089517321:route-table/rtb-06b3fdf186b87b9b8",
            "id": "rtb-06b3fdf186b87b9b8",
            "owner_id": "030089517321",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0769acf15fc88f96e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "My-Custom-Network-Address-Route"
            },
            "tags_all": {
              "Name": "My-Custom-Network-Address-Route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b050a9c14138aac0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.custom-elastic-ip",
            "aws_nat_gateway.custom-nat-gateway",
            "aws_subnet.public-subnet2",
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030089517321:route-table/rtb-08c02c5489315c1db",
            "id": "rtb-08c02c5489315c1db",
            "owner_id": "030089517321",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04c4e7b4dac6140a1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b050a9c14138aac0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.custom-internet-gateway",
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table-ass-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b04989b993427f32",
            "route_table_id": "rtb-06b3fdf186b87b9b8",
            "subnet_id": "subnet-05afb219a3ba77d8d"
          },
          "dependencies": [
            "aws_eip.custom-elastic-ip",
            "aws_nat_gateway.custom-nat-gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private-subnet1",
            "aws_subnet.public-subnet2",
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table-ass-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bcc329770c76cf9",
            "route_table_id": "rtb-06b3fdf186b87b9b8",
            "subnet_id": "subnet-0ff4c1b1cbcdb6a7b"
          },
          "dependencies": [
            "aws_eip.custom-elastic-ip",
            "aws_nat_gateway.custom-nat-gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private-subnet2",
            "aws_subnet.public-subnet2",
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table-ass-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6dba5e18df7d789",
            "route_table_id": "rtb-08c02c5489315c1db",
            "subnet_id": "subnet-030722fc91333fae4"
          },
          "dependencies": [
            "aws_internet_gateway.custom-internet-gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public-subnet1",
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table-ass-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff0068e9b251cbff",
            "route_table_id": "rtb-08c02c5489315c1db",
            "subnet_id": "subnet-0fb19ac6c52f7343f"
          },
          "dependencies": [
            "aws_internet_gateway.custom-internet-gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public-subnet2",
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Custom-Public-SG-DB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030089517321:security-group/sg-0cf8ed7f4b422367f",
            "description": "web and SSH allowed",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf8ed7f4b422367f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Custom-Public-SG-DB",
            "name_prefix": "",
            "owner_id": "030089517321",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b050a9c14138aac0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "My-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030089517321:security-group/sg-023de6f8cdc2b683d",
            "description": "security group for load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023de6f8cdc2b683d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "My-sg",
            "name_prefix": "",
            "owner_id": "030089517321",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b050a9c14138aac0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "My_database_tier_lu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030089517321:security-group/sg-0be18235dca00bb45",
            "description": "allow traffic from SSH \u0026 HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be18235dca00bb45",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8279,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-023de6f8cdc2b683d"
                ],
                "self": false,
                "to_port": 8279
              }
            ],
            "name": "My_database_tier_lu",
            "name_prefix": "",
            "owner_id": "030089517321",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b050a9c14138aac0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.My-sg",
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030089517321:subnet/subnet-05afb219a3ba77d8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05afb219a3ba77d8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "030089517321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My-private-subnet1"
            },
            "tags_all": {
              "Name": "My-private-subnet1"
            },
            "vpc_id": "vpc-0b050a9c14138aac0"
          },
          "dependencies": [
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030089517321:subnet/subnet-0ff4c1b1cbcdb6a7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff4c1b1cbcdb6a7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "030089517321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My-private-subnet2"
            },
            "tags_all": {
              "Name": "My-private-subnet2"
            },
            "vpc_id": "vpc-0b050a9c14138aac0"
          },
          "dependencies": [
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030089517321:subnet/subnet-030722fc91333fae4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030722fc91333fae4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "030089517321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My-public-subnet1"
            },
            "tags_all": {
              "Name": "My-public-subnet1"
            },
            "vpc_id": "vpc-0b050a9c14138aac0"
          },
          "dependencies": [
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030089517321:subnet/subnet-0fb19ac6c52f7343f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb19ac6c52f7343f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "030089517321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My-public-subnet2"
            },
            "tags_all": {
              "Name": "My-public-subnet2"
            },
            "vpc_id": "vpc-0b050a9c14138aac0"
          },
          "dependencies": [
            "aws_vpc.custom-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:030089517321:vpc/vpc-0b050a9c14138aac0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0daac8ce82936b158",
            "default_route_table_id": "rtb-0d17d5f56fe4a932a",
            "default_security_group_id": "sg-039dfafba34ce41e1",
            "dhcp_options_id": "dopt-01b13de0fcad2ed16",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b050a9c14138aac0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d17d5f56fe4a932a",
            "owner_id": "030089517321",
            "tags": {
              "Name": "Customvpc"
            },
            "tags_all": {
              "Name": "Customvpc"
            }
          }
        }
      ]
    }
  ]
}